--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "discord-archiver.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm discord_archive/*.md; rm discord_archive/checkpoints.json"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "github:dotenvx/dotenvx",
