--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx dotenvx run -- node discord-archiver.js",
-    "clean": "rm archive/*.md; rm archive/checkpoints.json"
+    "clean": "rm data/archive/*.md; rm data/checkpoints.json"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "github:dotenvx/dotenvx",
